hw20/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tbolbas-php
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tbolbas-php
  template:
    metadata:
      labels:
        app: tbolbas-php
    spec:
      containers:
        - name: php
          image: tbolbas/php:latest
          ports:
            - containerPort: 80
