hw20/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tbolbas-php-svc
spec:
  type: LoadBalancer
  selector:
    app: tbolbas-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
