hw20/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tbolbas-php-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tbolbas-php-svc
                port:
                  number: 80
